add acceptance tests for AI deploy app resource

--- a/.cds/terraform-provider-ovh.pip.yml
+++ b/.cds/terraform-provider-ovh.pip.yml
@@ -55,3 +55,6 @@ parameters:
   skipthistest.okms:
     type: boolean
     description: Skip OKMS tests
+  skipthistest.aideploy:
+    type: boolean
+    description: Skip AI deploy tests
