--- a/.cds/terraform-provider-ovh.yml
+++ b/.cds/terraform-provider-ovh.yml
@@ -725,6 +725,18 @@ workflow:
     pipeline: terraform-provider-ovh-testacc
     when:
     - success
+  Tests_TestAccAiDeploy_basic:
+    application: terraform-provider-ovh
+    depends_on:
+      - terraform-provider-ovh-pre-sweepers
+    environment: acctests
+    one_at_a_time: true
+    parameters:
+      testargs: -run 'TestAccAiDeploy_basic':
+      skipthispipeline: "{{.workflow.terraform-provider-ovh.pip.skipthistest.aideploy}}"
+    pipeline: terraform-provider-ovh-testacc
+    when:
+      - success
   terraform-provider-ovh:
     application: terraform-provider-ovh
     parameters:
@@ -802,6 +814,7 @@ workflow:
     - Tests_TestAccIpMove_basic
     - Tests_IPFirewall
     - Tests_Okms
+    - Tests_TestAccAiDeploy_basic
     environment: acctests
     one_at_a_time: true
     pipeline: terraform-provider-ovh-run-sweepers
